--- a/scss/components/sf-dropdown.scss
+++ b/scss/components/sf-dropdown.scss
@@ -106,7 +106,7 @@
     /**
      * Cosmetic.
      */
-    cursor: pointer;
+    @include sf-cursor-interactive;
     // Cosmetic state indicator. In the hover version, it's static; in the
     // toggled version, its content is changed when the state is toggled.
     &::after {
